--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -20,7 +20,7 @@
     </div>
     <button id="getPhrase">GET PHRASE</button>
     
-    <img src="_image/draw01.svg" alt=" ilustrações de aventura" width="350px" />
+    <img src="draw01.svg" alt=" ilustrações de aventura" width="350px" />
     
      <footer>
        <h2>&copy; Yrllan Brandão 2021</h2>
